--- a/templates/default.mustache
+++ b/templates/default.mustache
@@ -2,49 +2,39 @@
 # Author: {{scheme-author}}
 
 color={{base00-hex}}
-bs-hl-color=
-caps-lock-bs-hl-color=
-caps-lock-key-hl-color=
-inside-color=
-inside-clear-color=
-inside-caps-lock-color=
-inside-ver-color=
-inside-wrong-color=
-key-hl-color=
-layout-bg-color=
-layout-border-color=
-layout-text-color=
-line-color=
-line-clear-color=
-line-caps-lock-color=
-line-ver-color=
-line-wrong-color=
-ring-color=
-ring-clear-color=
-ring-caps-lock-color=
-ring-ver-color=
-ring-wrong-color=
-separator-color=
-text-color=
-text-clear-color=
-text-caps-lock-color=
-text-ver-color=
-text-wrong-color=
 
+bs-hl-color={{base03-hex}}
+caps-lock-bs-hl-color={{base03-hex}}
 
-{{base00-hex}}
-{{base01-hex}}
-{{base02-hex}}
-{{base03-hex}}
-{{base04-hex}}
-{{base05-hex}}
-{{base06-hex}}
-{{base07-hex}}
-{{base08-hex}}
-{{base09-hex}}
-{{base0A-hex}}
-{{base0B-hex}}
-{{base0C-hex}}
-{{base0D-hex}}
-{{base0E-hex}}
-{{base0F-hex}}
+key-hl-color={{base0D-hex}}
+caps-lock-key-hl-color={{base0D-hex}}
+
+inside-color={{base00-hex}}
+inside-clear-color={{base00-hex}}
+inside-caps-lock-color={{base00-hex}}
+inside-ver-color={{base05-hex}}
+inside-wrong-color={{base00-hex}}
+
+layout-bg-color={{base00-hex}}
+layout-border-color={{base00-hex}}
+layout-text-color={{base05-hex}}
+
+line-color={{base05-hex}}
+line-clear-color={{base05-hex}}
+line-caps-lock-color={{base0D-hex}}
+line-ver-color={{base05-hex}}
+line-wrong-color={{base08-hex}}
+
+ring-color={{base00-hex}}
+ring-clear-color={{base00-hex}}
+ring-caps-lock-color={{base00-hex}}
+ring-ver-color={{base00-hex}}
+ring-wrong-color={{base00-hex}}
+
+separator-color={{base00-hex}}
+
+text-color={{base05-hex}}
+text-clear-color={{base05-hex}}
+text-caps-lock-color={{base0D-hex}}
+text-ver-color={{base00-hex}}
+text-wrong-color={{base08-hex}}
