template with and without line

--- a/templates/smooth.mustache
+++ b/templates/smooth.mustache
@@ -19,11 +19,11 @@ layout-bg-color={{base00-hex}}
 layout-border-color={{base00-hex}}
 layout-text-color={{base05-hex}}
 
-line-color={{base05-hex}}
-line-clear-color={{base05-hex}}
-line-caps-lock-color={{base0D-hex}}
+line-color={{base00-hex}}
+line-clear-color={{base00-hex}}
+line-caps-lock-color={{base00-hex}}
 line-ver-color={{base00-hex}}
-line-wrong-color={{base08-hex}}
+line-wrong-color={{base00-hex}}
 
 ring-color={{base00-hex}}
 ring-clear-color={{base00-hex}}
